...
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Login.BasicLoginActivity"
    tools:showIn="@layout/activity_basic_login"
    android:background="@drawable/ucsb">

    <EditText
        android:id="@+id/email"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/signup"
        android:layout_width="170dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:text="Sign Up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/login"
        android:layout_width="170dp"
...
